[package]
name = "oxvg-extism"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
oxvg_ast = { workspace = true }
oxvg_optimiser = { workspace = true }
extism-pdk = "1.3.0"
serde = { version = "1", features = ["derive"] }
